# Prism

./: .clang-format  CMakeLists.txt  README.md  changelog.md
docs/: Doxyfile
libs/Core/include/Prism/: Attribute.hpp  AttributeFactory.hpp  AttributeHolder.hpp  BaseTypes.hpp  ClassMember.hpp  Declaration.hpp  DefaultAttributeHolder.hpp  Entity.hpp  EntityBase.hpp  EntityFactory.hpp  EntitySet.hpp  Extractor.hpp  MatchCallback.hpp  MatchCallbackBase.hpp  MatcherSet.hpp  MatcherSetBuilder.hpp  Matchers.hpp
libs/Core/include/Prism/Attributes/: Annotation.hpp
libs/Core/include/Prism/ClassMembers/: DataMember.hpp
libs/Core/include/Prism/Detail/: Doxygen.hpp
libs/Core/include/Prism/Entities/: Class.hpp
libs/Core/include/Prism/Extractors/: DefaultExtractor.hpp  MatcherBasedExtractor.hpp
libs/Core/include/Prism/MatchCallbacks/: ClassMatchCallback.hpp
libs/Core/include/Prism/Utility/: Slice.hpp
libs/Core/src/: CMakeLists.txt
libs/Core/src/Prism/: AttributeFactory.cpp  BaseTypes.cpp  DefaultAttributeHolder.cpp  Entity.cpp  EntityBase.cpp  EntityFactory.cpp  EntitySet.cpp  Extractor.cpp  MatcherSet.cpp  MatcherSetBuilder.cpp
libs/Core/src/Prism/Attributes/: Annotation.cpp
libs/Core/src/Prism/ClassMembers/: DataMember.cpp
libs/Core/src/Prism/Entities/: Class.cpp
libs/Core/src/Prism/Extractors/: DefaultExtractor.cpp  MatcherBasedExtractor.cpp
libs/Core/src/Prism/MatchCallbacks/: ClassMatchCallback.cpp
libs/Core/tests/sources/Classes/: ForwardDeclaration.hpp  Members.hpp  Templates.hpp
libs/Core/tests/src/: CMakeLists.txt  main.cpp
libs/Core/tests/src/Entities/: ClassTests.cpp
libs/Core/tests/src/Matching/: MatchClasses.cpp
